:wrench: Fix overflow-y on title

--- a/public/styles/blog.styl
+++ b/public/styles/blog.styl
@@ -17,7 +17,8 @@
     font-weight 400
     margin 20px 0 0 0
     font-weight 700
-    overflow auto
+    overflow-x auto
+    overflow-y hidden
 
     &::before
         position absolute
